# petpipe

./: .gitignore  Dockerfile  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py  test.ipynb
files/: .bidsignore  CITATION.cff  README  dataset_description.json  participants.json  subject_trc-MK6240_pet.json  trc-MK6240_pet.json  trc-mk6240_pet_subject.json  trc-mk6240_rec-acdyn_pet.json
petpipe/: pet2bids.py  petpipe_processing.py  petpipe_processing_tmp.sh  petpipe_qc.py  pipeline_description.json  run.py  run_fastsurfer.sh  run_hippunfold.sh  utils.py
petpipe/config/: snakebids.yml
petpipe/workflow/: Snakefile
petpipe/workflow/rules/: hippo.smk  surfer.smk
petpipe/workflow/scripts/: petpipe_mapping.py
scripts/: run_hippunfold.sh  utils.py
tests/result/config/: snakebids.yml
